src/objects/loan__MFError__c.object
<CustomObject>
    <description>Object to store unforseen errors</description>
    <fields>
        <fullName>loan__Component__c</fullName>
        <description>Name of component</description>
        <label>Component</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Message__c</fullName>
        <description>Detailed message</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Type__c</fullName>
        <description>The type of error with code for documentation</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MFError</label>
    <nameField>
        <label>MFError Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MFErrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>